[gd_scene load_steps=3 format=3 uid="uid://fgh4h5hfhbmj"]

[ext_resource type="Script" path="res://scripts/ActionArea.gd" id="1_tgd8b"]
[ext_resource type="PackedScene" uid="uid://gbalqu2x6y48" path="res://scenes/Die.tscn" id="2_bx1ov"]

[node name="ActionArea" type="Node2D"]
position = Vector2(0, 32)
script = ExtResource("1_tgd8b")

[node name="Roll" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Roll"

[node name="Dice" type="Control" parent="."]
offset_top = 40.0
offset_right = 128.0
offset_bottom = 160.0

[node name="Die0" parent="Dice" instance=ExtResource("2_bx1ov")]
position = Vector2(16, 56)

[node name="Die1" parent="Dice" instance=ExtResource("2_bx1ov")]
position = Vector2(88, 56)

[node name="Die2" parent="Dice" instance=ExtResource("2_bx1ov")]
position = Vector2(16, 96)

[node name="Die3" parent="Dice" instance=ExtResource("2_bx1ov")]
position = Vector2(88, 96)

[node name="Stop" type="Button" parent="."]
offset_left = 64.0
offset_right = 107.0
offset_bottom = 31.0
text = "Stop"

[node name="Player" type="Label" parent="."]
offset_top = -32.0
offset_right = 128.0
offset_bottom = -9.0
text = "???"
